--- a/src/index.css
+++ b/src/index.css
@@ -278,6 +278,7 @@ nav a:hover {
 .checkout-button {
   background-color: #007bff;
   color: #fff;
+  margin-left: 10px;
   padding: 8px;
   cursor: pointer;
 }
